Hopefully propogates the css package fix for dialog content background which was hard coded as white not --agnostic-light so dark mode was borked.

--- a/agnostic-css/public/css-dist/components.concat.css
+++ b/agnostic-css/public/css-dist/components.concat.css
@@ -1267,7 +1267,7 @@ itself. */
   transform: none;
 }
 
-.drawer-up[aria-hidden] {
+.drawer-top[aria-hidden] {
   transform: none;
 }
 
